finalizando a seção de sequelize com nodejs

--- a/curso-node/9_SEQUELIZE/1_sequelize/views/layouts/main.handlebars
+++ b/curso-node/9_SEQUELIZE/1_sequelize/views/layouts/main.handlebars
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <nav id="navbar">
+        <ul>
+            <li><a href="/">Usuários</a></li>
+            <li><a href="/users/create">Cadastrar</a></li>
+        </ul>
+    </nav>
     {{{body}}}
 </body>
 </html>
