--- a/curso-node/9_SEQUELIZE/1_sequelize/views/home.handlebars
+++ b/curso-node/9_SEQUELIZE/1_sequelize/views/home.handlebars
@@ -1,1 +1,17 @@
-<h1>Olá Sequelize!</h1>
+<h1>Usuários Cadastrados:</h1>
+<div class="container">
+    {{#each users}}
+    <div class="item">
+        <h2>{{this.name}}</h2>
+        <p>{{this.occupation}}</p>
+        <div class="actions">
+            <a href="/users/{{this.id}}" class="details-btn">Ver Detalhes</a>
+            <a href="/users/edit/{{this.id}}" class="edit-btn">Editar</a>
+
+            <form action="/users/delete/{{this.id}}" method="POST">
+                <input type="submit" value="Excluir" class="delete-btn">
+            </form>
+        </div>
+    </div>
+    {{/each}}
+</div>
